fix: about component not visible

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -26,6 +26,11 @@ body {
   line-height: 1.2;
 }
 
+main > section {
+  grid-column: 1/-1;
+  gap: 20px 0;
+}
+
 h1,
 h2,
 h3 {
