--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -24,9 +24,9 @@
   padding: 4rem 0;
 }
 
+// NOTE: current using this class INTRO & ABOUT
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-  grid-column: 1/-1;
-  // gap: 20px 0;
+  gap: 20px 0;
 }
